# prj02

./: CMakeLists.txt  Cubic.cpp  Cubic.h  InterpolationPolicies.cpp  InterpolationPolicies.h  Interpolator.cpp  Interpolator.h  Interpolator2D.cpp  Interpolator2D.h  Linear.cpp  Linear.h  NearestNeighbor.cpp  NearestNeighbor.h  ShipData.cpp  ShipData.h  WaveData.cpp  WaveData.h  main.cpp
